--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta content="text/html; charset=utf-8" />
-        <title>Webpack App</title>
+        <title>Array Methods Visualizer</title>
     </head>
     <body>
         <div id="root"></div>
